# collection-of-my-programs

./: README.md  gen1.py  index.html
ternos-app/: ternos.py  test_ternos_core.py
ternos-media-viewer/: pyproject.toml
ternos-media-viewer/ternos_media/: gif_viewer.py  image_viewer.py  renderer.py
ternos-media-viewer/ternos_media.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
